--- a/test/test.csproj
+++ b/test/test.csproj
@@ -14,8 +14,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\src\double\Edge.js\Edge.js.csproj"/>
-    <ProjectReference Include="..\src\double\Edge.js.CSharp\Edge.js.CSharp.csproj" />
-    <!-- <PackageReference Include="Edge.js.CSharp" Version="1.2.0" /> -->
+    <!--<ProjectReference Include="..\src\double\Edge.js.CSharp\Edge.js.CSharp.csproj" />-->
+    <PackageReference Include="Edge.js.CSharp" Version="1.2.0" />
     <PackageReference Include="System.AppContext" Version="4.3.0" />
     <PackageReference Include="System.Collections.Specialized" Version="4.3.0" />
     <PackageReference Include="System.Console" Version="4.3.0" />
@@ -25,7 +25,7 @@
     <PackageReference Include="System.Linq" Version="4.3.0" />
     <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
     <PackageReference Include="System.Reflection" Version="4.3.0" />
-    <PackageReference Include="System.Reflection.TypeExtensions" Version="4.3.0" />
+    <PackageReference Include="System.Reflection.TypeExtensions" Version="4.4.0" />
     <PackageReference Include="System.Runtime" Version="4.3.0" />
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
     <PackageReference Include="System.Runtime.InteropServices" Version="4.3.0" />
@@ -34,8 +34,9 @@
     <PackageReference Include="System.Xml.ReaderWriter" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="1.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="1.1.3" />
-    <PackageReference Include="Microsoft.CodeAnalysis" Version="2.3.2" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.3.0" />
+    <PackageReference Include="Microsoft.DotNet.InternalAbstractions" Version="1.0.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis" Version="2.6.1" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.4.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
