--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "url": "http://tomasz.janczuk.org",
     "twitter": "tjanczuk"
   },
-  "version": "9.3.5",
+  "version": "9.3.6",
   "description": "Edge.js: run .NET and Node.js in-process on Windows, Mac OS, and Linux",
   "tags": [
     "owin",
@@ -18,7 +18,19 @@
     "managed",
     ".net"
   ],
+  "keywords": [
+    "owin",
+    "edge",
+    "net",
+    "clr",
+    "coreclr",
+    "c#",
+    "mono",
+    "managed",
+    ".net"
+  ],
   "main": "./lib/edge.js",
+  "types": "edge-js.d.ts",
   "engines": {
     "node": ">= 6"
   },
