--- a/.travis.yml
+++ b/.travis.yml
@@ -20,19 +20,19 @@ node_js:
  - "11.2.0"
 
 install:
-# - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF ; fi
-# - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then echo "deb http://download.mono-project.com/repo/debian wheezy main" | sudo tee /etc/apt/sources.list.d/mono-xamarin.list ; fi
-# - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo sh -c 'echo "deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main" > /etc/apt/sources.list.d/dotnetdev.list' ; fi
-# - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 417A0893 ; fi
-# - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update ; fi
-# - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install mono-devel ; fi
-# - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install dotnet-dev-1.0.4 ; fi
-# - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install dotnet-sdk-2.0.0 ; fi
-# - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update ; fi
-# - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install glib mono openssl ; fi
-# - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then curl -sSL -k -o osx-net-core.pkg https://www.microsoft.com/net/download/thank-you/dotnet-sdk-2.1.500-macos-x64-installer ; fi
-# - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo installer -verboseR -pkg osx-net-core.pkg -target / ; fi
-# - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export PATH=/usr/local/share/dotnet:$PATH ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then apt install apt-transport-https ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then echo "deb https://download.mono-project.com/repo/ubuntu stable-xenial main" | sudo tee /etc/apt/sources.list.d/mono-official-stable.list ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget -q https://packages.microsoft.com/config/ubuntu/16.04/packages-microsoft-prod.deb ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo dpkg -i packages-microsoft-prod.deb ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install mono-devel ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install dotnet-sdk-2.1 ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install glib mono openssl ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then curl -sSL -k -o osx-net-core.pkg https://www.microsoft.com/net/download/thank-you/dotnet-sdk-2.1.500-macos-x64-installer ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo installer -verboseR -pkg osx-net-core.pkg -target / ; fi
+ - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export PATH=/usr/local/share/dotnet:$PATH ; fi
  - npm install
 
 script:
