--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
 # - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget -q https://packages.microsoft.com/config/ubuntu/16.04/packages-microsoft-prod.deb ; fi
 # - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo dpkg -i packages-microsoft-prod.deb ; fi
  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg ; fi
- - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo mv microsoft.gpg /etc/apt/trusted.gpg.d/microsoft.gpg
+ - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo mv microsoft.gpg /etc/apt/trusted.gpg.d/microsoft.gpg ; fi
  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod trusty main" > /etc/apt/sources.list.d/dotnetdev.list' ; fi
  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt install apt-transport-https ; fi
  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt update ; fi
