--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 image:
-- Visual Studio 2015
 - Ubuntu
+- Visual Studio 2015
 
 environment:
   matrix:
@@ -14,6 +14,8 @@ environment:
 
 install:
   - cmd: powershell Install-Product node $env:nodejs_version
+  - sh: sudo apt-get update
+  - sh: sudo apt-get install -y apt-transport-https build-essential libgconf-2-4 python
   - sh: nvm install $nodejs_version
   - npm install
   - npm i xunit-viewer
