--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,5 @@
 image:
-#- Ubuntu
-- Visual Studio 2015
+  - Visual Studio 2015
 
 environment:
   matrix:
@@ -13,10 +12,7 @@ environment:
     - nodejs_version: "11.3.0"
 
 install:
-  - cmd: powershell Install-Product node $env:nodejs_version
-  - sh: sudo apt-get update
-  - sh: sudo apt-get install -y apt-transport-https build-essential libgconf-2-4 python libglib2.0-dev
-  - sh: nvm install $nodejs_version
+  - ps: Install-Product node $env:nodejs_version x64
   - npm install
   - npm i xunit-viewer
 
@@ -26,10 +22,8 @@ test_script:
   - dotnet --version
   - npm test
   - node tools/coverage.js
-  - cmd: SET EDGE_USE_CORECLR=1 & npm test
-  - cmd: SET EDGE_USE_CORECLR=1 & node tools/coverage.js
-  - sh: EDGE_USE_CORECLR=1 npm test
-  - sh: EDGE_USE_CORECLR=1 node tools/coverage.js
+  - SET EDGE_USE_CORECLR=1 & npm test
+  - SET EDGE_USE_CORECLR=1 & node tools/coverage.js
 
 after_test:
   - ps: |
