--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ environment:
     - nodejs_version: "11.3.0"
 
 install:
-  - cmd: powershell Install-Product node $env:nodejs_version
+  - ps: Install-Product node $env:nodejs_version
   - npm install
   - npm i xunit-viewer
 
