--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,11 +14,11 @@ environment:
 
 install:
   - cmd: powershell Install-Product node $env:nodejs_version x64
-  - sh: sudo apt-get update
-  - sh: sudo apt-get install -y build-essential libgconf-2-4 python libglib2.0-dev
+  - sh: sudo apt-get -qq update
+  - sh: sudo apt-get -y -qq install build-essential libgconf-2-4 python libglib2.0-dev
   - sh: nvm install $nodejs_version
   - npm install
-  - npm i xunit-viewer
+  - npm i -q xunit-viewer
 
 test_script:
   - node --version
