--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 image:
-  - Ubuntu
   - Visual Studio 2015
+  - Ubuntu
 
 environment:
   matrix:
@@ -13,13 +13,16 @@ environment:
     - nodejs_version: "11.3.0"
 
 install:
+  - cmd: powershell wget -UseBasicParsing https://github.com/coreybutler/nvm-windows/releases/download/1.1.7/nvm-setup.zip -OutFile nvm-setup.zip
+  - cmd: powershell Expand-Archive -Path nvm-setup.zip -DestinationPath .
+  - cmd: powershell Start-Process -Wait -FilePath 'nvm-setup.exe' -ArgumentList '/S' -PassThru
   - cmd: powershell Install-Product node $env:nodejs_version x64
-  - cmd: powershell $PSVersionTable.PSVersion
   - sh: sudo apt-get -qq update
   - sh: sudo apt-get -y -qq install build-essential libgconf-2-4 python libglib2.0-dev
   - sh: nvm install $nodejs_version
-  - npm install
-  - npm i xunit-viewer --silent &> /dev/null
+  - npm install -q
+  - sh: npm i xunit-viewer --silent &> /dev/null
+  - cmd: npm i xunit-viewer >nul
 
 test_script:
   - node --version
