--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ install:
   - cmd: powershell wget -UseBasicParsing https://github.com/coreybutler/nvm-windows/releases/download/1.1.7/nvm-setup.zip -OutFile nvm-setup.zip
   - cmd: powershell Expand-Archive -Path nvm-setup.zip -DestinationPath .
   - cmd: start /wait nvm-setup.exe /SILENT /SUPPRESSMSGBOXES /q /s
-  - cmd: start wait "%AppData%\nvm\nvm.exe install $env:nodejs_version x64"
+  - cmd: start /wait "%AppData%\nvm\nvm.exe" install $env:nodejs_version x64
   #- cmd: powershell Install-Product node $env:nodejs_version x64
   - sh: sudo apt-get -qq update
   - sh: sudo apt-get -y -qq install build-essential libgconf-2-4 python libglib2.0-dev
